@@ -30,3 +30,6 @@ class TestDoctests(BaseTestCase):
     def test_gitify_fetch(self):
         self._test_doctest()
 
+    def test_symlink_migration(self):
+        self._test_doctest()
+
