@@ -2,6 +2,7 @@ import os
 from gitsvnhelpers.testing import BaseTestCase
 from gitsvnhelpers.utils import basename
 from gitsvnhelpers.utils import is_git
+from gitsvnhelpers.utils import is_git_link
 from gitsvnhelpers.utils import is_svn
 from gitsvnhelpers.utils import svn_type
 from gitsvnhelpers.utils import svn_branch
@@ -15,6 +16,7 @@ class TestUtils(BaseTestCase):
         self.checkout('trunk')
         self.failUnless(is_svn())
         self.failIf(is_git())
+        self.failIf(is_git_link())
         self.failUnlessEqual(svn_type(), 'trunk')
         self.failUnlessEqual(basename(), 'testpackage')
         self.failUnlessEqual(svn_branch(), 'trunk')
@@ -25,6 +27,7 @@ class TestUtils(BaseTestCase):
         self.checkout('branches/feature-bar')
         self.failUnless(is_svn())
         self.failIf(is_git())
+        self.failIf(is_git_link())
         self.failUnlessEqual(svn_type(), 'branches')
         self.failUnlessEqual(basename(), 'testpackage')
         self.failUnlessEqual(svn_branch(), 'feature-bar')
@@ -35,6 +38,7 @@ class TestUtils(BaseTestCase):
         self.checkout('tags/0.1')
         self.failUnless(is_svn())
         self.failIf(is_git())
+        self.failIf(is_git_link())
         self.failUnlessEqual(svn_type(), 'tags')
         self.failUnlessEqual(basename(), 'testpackage')
         self.failUnlessEqual(svn_branch(), '0.1')
