@@ -5,10 +5,13 @@
   the issue of having the git and svn repository out of sync when working
   with multiple copies of the same repository and greatly reduces the risk of
   conflicts.
-  
+
   This also means, that the fetch command now only operates on the cache 
   without modifying the working copy (making it safe to run via crontab,
   for example)
+
+  Running gitify against an old-style working copy will produce an error.
+  Simply deleting the symlink and re-running gitify remedies that, however.
   [tomster]
 
 0.6 - 2010-03-07
